--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 			<div
 				id="carouselExampleIndicators"
 				class="carousel slide"
-				data-ride="carousel"
+        data-ride="carousel"
+        data-interval="99999999999999999999999"
 			>
 				<div class="carousel-inner" role="listbox">
 					<!-- Slide One -->
