--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
 	</head>
 	<body id="page-top">
 		<!-- Navigation-->
-		<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+		<nav
+			class="navbar navbar-expand-lg navbar-light fixed-top"
+			id="mainNav"
+		>
 			<div class="container">
-				<a class="navbar-brand js-scroll-trigger" href="#page-top">famished</a>
+				<a class="navbar-brand js-scroll-trigger" href="#page-top"
+					>famished</a
+				>
 				<button
 					class="navbar-toggler navbar-toggler-right"
 					type="button"
@@ -44,10 +49,16 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger" href="#about">About</a>
+							<a class="nav-link js-scroll-trigger" href="#about"
+								>About</a
+							>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger" href="#process">Process</a>
+							<a
+								class="nav-link js-scroll-trigger"
+								href="#process"
+								>Process</a
+							>
 						</li>
 					</ul>
 				</div>
@@ -58,8 +69,8 @@
 			<div
 				id="carouselExampleIndicators"
 				class="carousel slide"
-        data-ride="carousel"
-        data-interval="99999999999999999999999"
+				data-ride="carousel"
+				data-interval="10000"
 			>
 				<div class="carousel-inner" role="listbox">
 					<!-- Slide One -->
@@ -174,7 +185,10 @@
 					role="button"
 					data-slide="prev"
 				>
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span
+						class="carousel-control-prev-icon"
+						aria-hidden="true"
+					></span>
 					<span class="sr-only">Previous</span>
 				</a>
 				<a
@@ -183,7 +197,10 @@
 					role="button"
 					data-slide="next"
 				>
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span
+						class="carousel-control-next-icon"
+						aria-hidden="true"
+					></span>
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
@@ -195,13 +212,15 @@
 					<div class="col-lg-8 mx-auto">
 						<h2 class="text-white mb-4">famished intro</h2>
 						<p class="text-white-50">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-							eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-							enim ad minim veniam, quis nostrud exercitation ullamco laboris
-							nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-							reprehenderit in voluptate velit esse cillum dolore eu fugiat
-							nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-							sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Lorem ipsum dolor sit amet, consectetur adipiscing
+							elit, sed do eiusmod tempor incididunt ut labore et
+							dolore magna aliqua. Ut enim ad minim veniam, quis
+							nostrud exercitation ullamco laboris nisi ut aliquip
+							ex ea commodo consequat. Duis aute irure dolor in
+							reprehenderit in voluptate velit esse cillum dolore
+							eu fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui officia
+							deserunt mollit anim id est laborum.
 						</p>
 					</div>
 				</div>
@@ -223,13 +242,16 @@
 						<div class="featured-text text-center text-lg-left">
 							<h4>Process</h4>
 							<p class="text-black-50 mb-0">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-								eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-								enim ad minim veniam, quis nostrud exercitation ullamco laboris
-								nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-								in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-								nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-								sunt in culpa qui officia deserunt mollit anim id est laborum.
+								Lorem ipsum dolor sit amet, consectetur
+								adipiscing elit, sed do eiusmod tempor
+								incididunt ut labore et dolore magna aliqua. Ut
+								enim ad minim veniam, quis nostrud exercitation
+								ullamco laboris nisi ut aliquip ex ea commodo
+								consequat. Duis aute irure dolor in
+								reprehenderit in voluptate velit esse cillum
+								dolore eu fugiat nulla pariatur. Excepteur sint
+								occaecat cupidatat non proident, sunt in culpa
+								qui officia deserunt mollit anim id est laborum.
 							</p>
 						</div>
 					</div>
