--- a/index.html
+++ b/index.html
@@ -26,48 +26,52 @@
 	</head>
 	<body id="page-top">
 		<!-- Navigation-->
-		<nav
-			class="navbar navbar-expand-lg navbar-light fixed-top"
-			id="mainNav"
-		>
-			<div class="container">
-				<a class="navbar-brand js-scroll-trigger" href="#page-top"
-					>famished</a
-				>
-				<button
-					class="navbar-toggler navbar-toggler-right"
-					type="button"
-					data-toggle="collapse"
-					data-target="#navbarResponsive"
-					aria-controls="navbarResponsive"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					Menu
-					<i class="fas fa-bars"></i>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger" href="#about"
-								>About</a
-							>
-						</li>
-						<li class="nav-item">
-							<a
-								class="nav-link js-scroll-trigger"
-								href="#process"
-								>Process</a
-							>
-						</li>
-					</ul>
+		<header>
+			<nav
+				class="navbar navbar-expand-lg navbar-light fixed-top"
+				id="mainNav"
+			>
+				<div class="container">
+					<a class="navbar-brand js-scroll-trigger" href="#page-top"
+						>famished</a
+					>
+					<button
+						class="navbar-toggler navbar-toggler-right"
+						type="button"
+						data-toggle="collapse"
+						data-target="#navbarResponsive"
+						aria-controls="navbarResponsive"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						Menu
+						<i class="fas fa-bars"></i>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarResponsive">
+						<ul class="navbar-nav ml-auto">
+							<li class="nav-item">
+								<a
+									class="nav-link js-scroll-trigger"
+									href="#intro"
+									>Intro</a
+								>
+							</li>
+							<li class="nav-item">
+								<a
+									class="nav-link js-scroll-trigger"
+									href="#process"
+									>Process</a
+								>
+							</li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</nav>
-		<!-- Masthead-->
-		<header class="masthead">
+			</nav>
+		</header>
+		<!-- bell carousel-->
+		<section class="carousel">
 			<div
-				id="carouselExampleIndicators"
+				id="carouselIndicators"
 				class="carousel slide"
 				data-ride="carousel"
 				data-interval="10000"
@@ -75,7 +79,7 @@
 				<div class="carousel-inner" role="listbox">
 					<!-- Slide One -->
 					<div class="carousel-item active">
-						<img src="assets/img/1.jpg" alt="" />
+						<img src="assets/img/circe1.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">First Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -83,7 +87,7 @@
 					</div>
 					<!-- Slide Two -->
 					<div class="carousel-item">
-						<img src="assets/img/2.jpg" alt="" />
+						<img src="assets/img/circe2.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Second Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -91,7 +95,7 @@
 					</div>
 					<!-- Slide Three -->
 					<div class="carousel-item">
-						<img src="assets/img/3.jpg" alt="" />
+						<img src="assets/img/circe3.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Third Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -99,7 +103,7 @@
 					</div>
 					<!-- Slide Four -->
 					<div class="carousel-item">
-						<img src="assets/img/4.jpg" alt="" />
+						<img src="assets/img/circe4.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Fourth Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -107,7 +111,7 @@
 					</div>
 					<!-- Slide Five -->
 					<div class="carousel-item">
-						<img src="assets/img/5.jpg" alt="" />
+						<img src="assets/img/circe5.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Fifth Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -115,7 +119,7 @@
 					</div>
 					<!-- Slide Six -->
 					<div class="carousel-item">
-						<img src="assets/img/6.jpg" alt="" />
+						<img src="assets/img/circe6.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Sixth Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -123,7 +127,7 @@
 					</div>
 					<!-- Slide Seven -->
 					<div class="carousel-item">
-						<img src="assets/img/7.jpg" alt="" />
+						<img src="assets/img/circe7.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">First Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -131,7 +135,7 @@
 					</div>
 					<!-- Slide Eight -->
 					<div class="carousel-item">
-						<img src="assets/img/8.jpg" alt="" />
+						<img src="assets/img/circe8.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Second Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -139,7 +143,7 @@
 					</div>
 					<!-- Slide Nine -->
 					<div class="carousel-item">
-						<img src="assets/img/9.jpg" alt="" />
+						<img src="assets/img/circe9.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Third Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -147,7 +151,7 @@
 					</div>
 					<!-- Slide Ten -->
 					<div class="carousel-item">
-						<img src="assets/img/10.jpg" alt="" />
+						<img src="assets/img/circe10.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Fourth Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -155,7 +159,7 @@
 					</div>
 					<!-- Slide Eleven -->
 					<div class="carousel-item">
-						<img src="assets/img/11.jpg" alt="" />
+						<img src="assets/img/circe11.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Fifth Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -163,7 +167,7 @@
 					</div>
 					<!-- Slide Twelve -->
 					<div class="carousel-item">
-						<img src="assets/img/12.jpg" alt="" />
+						<img src="assets/img/circe12.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Sixth Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -171,7 +175,7 @@
 					</div>
 					<!-- Slide Thirteen -->
 					<div class="carousel-item">
-						<img src="assets/img/13.jpg" alt="" />
+						<img src="assets/img/circe13.jpg" alt="" />
 						<div class="carousel-caption d-none d-md-block">
 							<!-- <h2 class="display-4">Sixth Slide</h2> -->
 							<!-- <p class="lead">description</p> -->
@@ -181,7 +185,7 @@
 
 				<a
 					class="carousel-control-prev"
-					href="#carouselExampleIndicators"
+					href="#carouselIndicators"
 					role="button"
 					data-slide="prev"
 				>
@@ -193,7 +197,7 @@
 				</a>
 				<a
 					class="carousel-control-next"
-					href="#carouselExampleIndicators"
+					href="#carouselIndicators"
 					role="button"
 					data-slide="next"
 				>
@@ -204,32 +208,147 @@
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
-		</header>
-		<!-- About-->
-		<section class="about-section text-center" id="about">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8 mx-auto">
-						<h2 class="text-white mb-4">famished intro</h2>
-						<p class="text-white-50">
-							Lorem ipsum dolor sit amet, consectetur adipiscing
-							elit, sed do eiusmod tempor incididunt ut labore et
-							dolore magna aliqua. Ut enim ad minim veniam, quis
-							nostrud exercitation ullamco laboris nisi ut aliquip
-							ex ea commodo consequat. Duis aute irure dolor in
-							reprehenderit in voluptate velit esse cillum dolore
-							eu fugiat nulla pariatur. Excepteur sint occaecat
-							cupidatat non proident, sunt in culpa qui officia
-							deserunt mollit anim id est laborum.
-						</p>
-					</div>
+		</section>
+		<!-- Intro -->
+		<div class="container intro-section text-center" id="intro">
+			<div class="row">
+				<div class="col-lg-8 mx-auto">
+					<h2 class="text-white mb-4">famished intro</h2>
+					<p class="text-white-50">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+						sed do eiusmod tempor incididunt ut labore et dolore
+						magna aliqua. Ut enim ad minim veniam, quis nostrud
+						exercitation ullamco laboris nisi ut aliquip ex ea
+						commodo consequat. Duis aute irure dolor in
+						reprehenderit in voluptate velit esse cillum dolore eu
+						fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+						non proident, sunt in culpa qui officia deserunt mollit
+						anim id est laborum.
+					</p>
 				</div>
 			</div>
+		</div>
+		<!-- bell carousel -->
+		<section class="carousel">
+			<div
+				id="carouselIndicators"
+				class="carousel slide"
+				data-ride="carousel"
+				data-interval="10000"
+			>
+				<div class="carousel-inner" role="listbox">
+					<!-- Slide One -->
+					<div class="carousel-item active">
+						<img src="assets/img/bell1.jpg" alt="" />
+						<div class="carousel-caption d-none d-md-block">
+							<!-- <h2 class="display-4">First Slide</h2> -->
+							<!-- <p class="lead">description</p> -->
+						</div>
+					</div>
+					<!-- Slide Two -->
+					<div class="carousel-item">
+						<img src="assets/img/bell2.jpg" alt="" />
+						<div class="carousel-caption d-none d-md-block">
+							<!-- <h2 class="display-4">Second Slide</h2> -->
+							<!-- <p class="lead">description</p> -->
+						</div>
+					</div>
+					<!-- Slide Three -->
+					<div class="carousel-item">
+						<img src="assets/img/bell3.jpg" alt="" />
+						<div class="carousel-caption d-none d-md-block">
+							<!-- <h2 class="display-4">Third Slide</h2> -->
+							<!-- <p class="lead">description</p> -->
+						</div>
+					</div>
+					<!-- Slide Four -->
+					<div class="carousel-item">
+						<img src="assets/img/bell4.jpg" alt="" />
+						<div class="carousel-caption d-none d-md-block">
+							<!-- <h2 class="display-4">Fourth Slide</h2> -->
+							<!-- <p class="lead">description</p> -->
+						</div>
+					</div>
+					<!-- Slide Five -->
+					<div class="carousel-item">
+						<img src="assets/img/bell5.jpg" alt="" />
+						<div class="carousel-caption d-none d-md-block">
+							<!-- <h2 class="display-4">Fifth Slide</h2> -->
+							<!-- <p class="lead">description</p> -->
+						</div>
+					</div>
+					<!-- Slide Six -->
+					<div class="carousel-item">
+						<img src="assets/img/bell6.jpg" alt="" />
+						<div class="carousel-caption d-none d-md-block">
+							<!-- <h2 class="display-4">Sixth Slide</h2> -->
+							<!-- <p class="lead">description</p> -->
+						</div>
+					</div>
+					<!-- Slide Seven -->
+					<div class="carousel-item">
+						<img src="assets/img/bell7.jpg" alt="" />
+						<div class="carousel-caption d-none d-md-block">
+							<!-- <h2 class="display-4">First Slide</h2> -->
+							<!-- <p class="lead">description</p> -->
+						</div>
+					</div>
+					<!-- Slide Eight -->
+					<div class="carousel-item">
+						<img src="assets/img/bell8.jpg" alt="" />
+						<div class="carousel-caption d-none d-md-block">
+							<!-- <h2 class="display-4">Second Slide</h2> -->
+							<!-- <p class="lead">description</p> -->
+						</div>
+					</div>
+					<!-- Slide Nine -->
+					<div class="carousel-item">
+						<img src="assets/img/bell9.jpg" alt="" />
+						<div class="carousel-caption d-none d-md-block">
+							<!-- <h2 class="display-4">Third Slide</h2> -->
+							<!-- <p class="lead">description</p> -->
+						</div>
+					</div>
+					<!-- Slide Ten -->
+					<div class="carousel-item">
+						<img src="assets/img/bell10.jpg" alt="" />
+						<div class="carousel-caption d-none d-md-block">
+							<!-- <h2 class="display-4">Fourth Slide</h2> -->
+							<!-- <p class="lead">description</p> -->
+						</div>
+					</div>
+				</div>
+				<a
+					class="carousel-control-prev"
+					href="#carouselIndicators"
+					role="button"
+					data-slide="prev"
+				>
+					<span
+						class="carousel-control-prev-icon"
+						aria-hidden="true"
+					></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a
+					class="carousel-control-next"
+					href="#carouselIndicators"
+					role="button"
+					data-slide="next"
+				>
+					<span
+						class="carousel-control-next-icon"
+						aria-hidden="true"
+					></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
 		</section>
+
 		<!-- Process-->
-		<section class="projects-section bg-light" id="process">
+		<section class="process-section bg-light" id="process">
 			<div class="container">
-				<!-- Featured Project Row-->
+				<!-- process row-->
 				<div class="row align-items-center no-gutters mb-4 mb-lg-5">
 					<div class="col-xl-8 col-lg-7">
 						<img
@@ -258,6 +377,7 @@
 				</div>
 			</div>
 		</section>
+
 		<!-- Contact-->
 		<!-- <section class="contact-section bg-black">
             <div class="container">
