update copy and background color

--- a/index.html
+++ b/index.html
@@ -210,21 +210,23 @@
 			</div>
 		</section>
 		<!-- Intro -->
-		<div class="container intro-section text-center" id="intro">
-			<div class="row">
-				<div class="col-lg-8 mx-auto">
-					<h2 class="text-white mb-4">famished intro</h2>
-					<p class="text-white-50">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-						sed do eiusmod tempor incididunt ut labore et dolore
-						magna aliqua. Ut enim ad minim veniam, quis nostrud
-						exercitation ullamco laboris nisi ut aliquip ex ea
-						commodo consequat. Duis aute irure dolor in
-						reprehenderit in voluptate velit esse cillum dolore eu
-						fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-						non proident, sunt in culpa qui officia deserunt mollit
-						anim id est laborum.
-					</p>
+		<div class="intro-container">
+			<div class="container intro-section text-center" id="intro">
+				<div class="row">
+					<div class="col-lg-8 mx-auto">
+						<h2 class="text-white mb-4">famished intro</h2>
+						<p class="text-white-50">
+							Lorem ipsum dolor sit amet, consectetur adipiscing
+							elit, sed do eiusmod tempor incididunt ut labore et
+							dolore magna aliqua. Ut enim ad minim veniam, quis
+							nostrud exercitation ullamco laboris nisi ut aliquip
+							ex ea commodo consequat. Duis aute irure dolor in
+							reprehenderit in voluptate velit esse cillum dolore
+							eu fugiat nulla pariatur. Excepteur sint occaecat
+							cupidatat non proident, sunt in culpa qui officia
+							deserunt mollit anim id est laborum.
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -377,6 +379,147 @@
 				</div>
 			</div>
 		</section>
+		<!-- Process-Center-->
+		<section class="process-section bg-light">
+			<div class="container">
+				<div class="row">
+					<div class=".col-xl-12 mx-auto">
+						<p class="text-black-50">
+							“C’mon honey! Not at the dinner table.”<br /><br />Food
+							scenes, taken from books, are styled and
+							photographed in a series to explore the heart of
+							overarching themes and the power of story.
+							<i>famished</i>is a visual study of feminine themes
+							through photographs of food. This project aims to
+							present feminine archetypes in an engaging way to
+							keep create conversation and foster connection to
+							recognize hierarchy in different forms everywhere
+							and make change.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Process-->
+		<section class="process-section bg-light" id="process">
+			<div class="container">
+				<!-- Featured Project Row-->
+				<div class="row align-items-center no-gutters mb-4 mb-lg-5">
+					<div class="col-xl-8 col-lg-7">
+						<img
+							class="img-fluid mb-3 mb-lg-0"
+							src="assets/img/famished-7.jpg"
+							alt=""
+						/>
+					</div>
+					<div class="col-xl-4 col-lg-5">
+						<div class="featured-text text-center text-lg-left">
+							<h4>Note</h4>
+							<p class="text-black-50 mb-0">
+								A note on process: I came to this project from a
+								tight turnaround deadline driven results based
+								enviornment. I was all green lights go on the
+								end result and top of mind answers. Process? Do
+								you mean what can I have to you by the end of
+								the day? So this project is a lot about process.
+								It is about research, wrtitng, re-writing,
+								circling back and making sense of the winding
+								road. It is about returning to process.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Process-Center-->
+		<section class="process-section bg-light" id="process">
+			<div class="container">
+				<div class="row">
+					<div class=".col-xl-12 mx-auto">
+						<h4>Problem statment</h4>
+						<p class="text-black-50">
+							Coming from a workplace with behavioral data driven
+							strategy, I kept thinking about how we could bring
+							more to the equation. I know that people have always
+							told stories for a number of evolutionary reasons,
+							one being the power of persuasion. Story is a strong
+							part of branding for this reason. I think as a
+							society we are coming to expect more from our media
+							and stories as our consumption and eloquence in
+							media rises. I think our work for media could carry
+							more cues from a deeper narrative tone. <br /><br />
+
+							Currently, my work is in design, photography and
+							food. Which really works out because I love food
+							beyond just it’s ability to captivate the five
+							senses. Food is at the heart of many stories and
+							carries themes and nuance like a champ. It can be
+							complex, layered, evocative and beautiful. It is
+							also an elemental human need and experience. This
+							project is a study in understanding the power of
+							food and narrative through a series in
+							photography.<br /><br />
+						</p>
+
+						<h4>Research</h4>
+						<p class="text-black-50">
+							As a first step, I take the already beautifully
+							constructed bones of a food scene from books or film
+							and try to pull it apart for the themes and then put
+							it back together for as a visual narrative feast.
+							Through this practice, I try to understand the
+							visual cues relevant to the themes and how to
+							incorporate elements to better communicate meaning.
+							<br /><br />
+							Much of my research began with film and film theory.
+							I watched food scenes and read about their layered
+							meanings and the hidden easter eggs to further
+							convey nuance of the themes. I read lots of
+							deconstruction and critique on thematic cues.<br />
+							<a
+								href="https://docs.google.com/document/d/1B7l4xAaMBnBll7Uj4DZ7HRXegiIPgn1gQpFtvdNyf04/edit?usp=sharing"
+								>A link to a research google doc can be found
+								here.</a
+							><br /><br />
+						</p>
+
+						<h4>Process</h4>
+						<p class="text-black-50">
+							For this project I needed an overarching theme as a
+							through line for the essays. The more I researched
+							and read I decided on feminine themes. It is
+							personally resonant and something I can speak with
+							authenticity about. <br /><br />
+
+							Early on in the project I planned on doing 3
+							photography essays including
+							<i>The Breakfast Club</i>. Further in with the
+							constraints of time and money, I narrowed it down to
+							two. I found rich material in the books,
+							<i>Circe</i> by Madeline Miller and
+							<i>The Bell Jar</i> by Sylvia Plath. Once decided, I
+							wrote and rewrote to try and find the essential
+							focus for each story. Once the ideas were paired
+							down, I wrote a breif,which I used as scaffolding. I
+							created moodboards and loose storyboards to better
+							illustrate my points. I thrifted for dishes and
+							fabrics. I listed menus and food cues. I looked at
+							lighting to unify the messaging through out the
+							shoot. These were just the action points.<br /><br />
+
+							The biggest process challenges were the the
+							questions that came up. A goal of Famished is to
+							successfully create a resonant visual narrative that
+							evokes connection and conversation. This came with
+							big questions. What makes imagery/design universal?
+							How do you determine the success of a narrative?
+							What are metrics for empathy? How do you intend
+							resonance? Is this all strategy?
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- Contact-->
 		<!-- <section class="contact-section bg-black">
@@ -422,7 +565,7 @@
         </section> -->
 		<!-- Footer-->
 		<footer class="footer bg-black small text-center text-white-50">
-			<div class="container">Copyright © Your Website 2020</div>
+			<div class="container">Copyright © Tiffany Wolff 2020</div>
 		</footer>
 		<!-- Bootstrap core JS-->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
